# filecoinCrew

./: .env.example  README.md  pyproject.toml
src/filecoincrew/: crew.py  main.py
src/filecoincrew/config/: agents.yaml  tasks.yaml
