[project]
name = "filecoincrew"
version = "0.1.0"
description = "filecoinCrew using crewAI"
authors = [{ name = "Rishikesh Kale", email = "rvk.rishikeshkale@gmail.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0",
    "lighthouseweb3>=0.1.1"
]

[project.scripts]
filecoincrew = "filecoincrew.main:run"
run_crew = "filecoincrew.main:run"
train = "filecoincrew.main:train"
replay = "filecoincrew.main:replay"
test = "filecoincrew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
